--- a/src/components/common/slideCard/styles.module.scss
+++ b/src/components/common/slideCard/styles.module.scss
@@ -1,8 +1,31 @@
 @import "../../../styles/colors.module.scss";
-.slideImg{
-  width: 340px;
-  height: 280px;
+.slide {
+  width: 280px;
+  height: 300px;
+  border: 1px solid $darkGray;
+  transition: 0.4s;
+  cursor: pointer;
+  margin-left: 12px;
+
+  overflow: hidden;
+  text-overflow: clip;
+
+  &:hover {
+    border-color: $lightRed;
+    height: 320px;
+  }
 }
-.slideDescription{
-  width: 340px;
+.slideImg {
+  width: 100%;
+  height: 170px;
+}
+.slideTitle {
+  color: white;
+  font-weight: bold;
+  padding: 8px 16px;
+}
+.slideDescription {
+  font-size: 14px;
+  padding: 0px 16px;
+  color: #ccc8c8;
 }
