Criação dos elementos de formulário de senha e do seu estilo visual - Formulário de senha

--- a/src/styles/profile.module.scss
+++ b/src/styles/profile.module.scss
@@ -92,6 +92,8 @@
   font-size: 15px;
   padding: 6px 20px;
   transition: 0.4s;
+  display: block;
+  margin: 20px auto;
   &:hover {
     border-color: $darkRed;
     background-color: transparent;
