--- a/src/components/common/headerGeneric/styles.module.scss
+++ b/src/components/common/headerGeneric/styles.module.scss
@@ -25,8 +25,13 @@
     gap: 20px;
   }
 }
-@media (max-width: 404px) {
+@media (max-width: 414px) {
   .headerContainer {
     justify-content: center;
+  }
+}
+@media (max-width: 320px) {
+  .player {
+    margin-top: -100px;
   }
 }
